--- a/client/src/components/ViewItemPage/view.css
+++ b/client/src/components/ViewItemPage/view.css
@@ -14,7 +14,6 @@
     margin-top:2px;
     margin-bottom: 2px;
     background-color:#ffffff;
-  
 }
 .view-content p{
     font-weight:bold;
@@ -131,6 +130,9 @@
 .view-back-bttn{
       margin-left:1%;
 }
+.mobile-view-back-bttn{
+    display:none;
+}
 
 .view-back-bttn button{
     height: 40px;
@@ -165,9 +167,8 @@
 .view-item-alert{
     display:flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: flex-start;
     width:22%;
-    /* border:1px solid red; */
     margin:1.4% 0 1.4% 1.5% ;
 }
 
@@ -176,8 +177,8 @@
     flex-direction: row;
     height:60vh;
     width:90%;
-  margin: 9px;
-  margin: 9px auto  9px auto;
+    margin: 9px;
+    margin: 9px auto  9px auto;
 }
 .view-product-img{
     display: flex;
@@ -203,7 +204,6 @@
     display:flex;
     flex-direction: column;
     justify-content: center;
-    /* border:1px solid green; */
     margin:2%;
 }
 .view-item-details span{
@@ -363,11 +363,11 @@
 }
 
 .view-modal-content{
-    color:rgb(121, 30, 30);   
-}
-.view-modal-content p{
+    color:rgb(121, 30, 30); 
     text-align:center;
+    padding:6%;  
 }
+
 
 .view-modal-close{
     cursor:pointer;
@@ -379,18 +379,18 @@
 
   @keyframes animatetfromside{
     from{
-       left: -400px;
+        left: -400px;
         opacity:0;
         transition:all;
     }
 }
 
 .display-block {
-display: block;
+    display: block;
 }
 
 .display-none {
-display: none;
+    display: none;
 }
 
 .view-modal-ok {
@@ -421,13 +421,12 @@ display: none;
 }
 
 .view-modal-ok-content{
-    color:rgb(39, 129, 39);   
-}
-.view-modal-ok-content p{
+    color:rgb(39, 129, 39);
     text-align:center;
+    padding:6%;   
 }
 
-  .view-modal-ok-close{
+.view-modal-ok-close{
     cursor:pointer;
     font-size:bold;
     margin-right:-2%;
@@ -437,38 +436,22 @@ display: none;
 
   @keyframes animatetfromside{
     from{
-       left: -400px;
+        left: -400px;
         opacity:0;
         transition:all;
     }
 }
 
 .display-block {
-display: block;
+    display: block;
 }
 
 .display-none {
-display: none;
+    display: none;
 }
 
-
-  /* @media screen and (max-width:600px){
-    .modal-main {
-      width:80%;
-      top:25%;
-      left:50%;
-      transform: translate(-50%,-50%);
-    }
-    .modal-content{
-      margin-top:0%;
-    }
-    .modal-bttn button{
-    height: 40px;
-    }
-} */
 @media only screen  and (max-width: 910px) {
-    .view-item-container{
-        
+    .view-item-container{    
         width:60%;
         min-height:70vh;
         margin:1.4% auto 1.4% auto ;
@@ -478,70 +461,83 @@ display: none;
         position: fixed;
         top: 65px;
         left: 45%;
-        width:55%;
+        width:75%;
         margin:1.4% 0 1.4% 1.5% ;
     }
+
     .view-back-bttn{
         position: fixed;
         top:12%;
-        left:2%;
-      
+        left:2%;   
   }
+
   .view-quantity{
     width: 40%;
     margin-right: 0.3%;
-}
-.view-add-to-cart{
-    width: 40%;
-}
-.view-item-size{
-    width:12%;
-}
-.view-info{
-   width:100%;
-}
-.view-product-img{
-    
-}
-.view-img{
- 
-}
-   
+    }
+    .view-add-to-cart{
+        width: 40%;
+    }
+    .view-item-size{
+        width:12%;
+    }
+    .view-info{
+    width:100%;
+    }  
 }
 
 @media only screen  and (max-width: 600px) {
-    .view-item-container{
-        
+    .view-modal-content{
+        padding:2%; 
+    }
+    .view-modal-ok-content{
+        padding:4%; 
+    }
+    .view-modal-main {     
+        width:100%;
+    }
+    .view-modal-ok-main {
+        width:100%;
+    }
+  
+    .view-back-bttn{
+        display:none;
+    }
+    .mobile-view-back-bttn{
+        display:flex;
+    }
+    .mobile-view-back-bttn button{
+        height: 40px;
+        border:none;
+        cursor: pointer;
+        background-color: rgb(218, 152, 218);
+        color:#ffffff;
+    }
+    .mobile-view-back-bttn button:hover{
+        text-decoration: underline;
+    }
+    .view-item-container{  
         width:60%;
         min-height:70vh;
         margin:1.4% auto 1.4% auto ;
     }
-    .view-back-bttn{
-        position: fixed;
-        top:12%;
-        left:2%;
-      
-  }
     .view-product-img{ 
         width:60%;
     }
     .view-img{
       width: 100%;;
-    }  
+    } 
+    .view-item-size{
+        width:16%;
+        padding:1.8%;
+    } 
 }
 @media only screen  and (max-width: 500px) {
-    .view-item-container{
-        
+    .view-item-container{  
         width:68%;
         min-height:70vh;
         margin:1.4% auto 1.4% auto ;
     }
-    .view-back-bttn{
-        position: fixed;
-        top:12%;
-        left:2%;
-      
-  }
     .view-product-img{ 
         width:60%;
     }
@@ -552,7 +548,6 @@ display: none;
 
 @media only screen and (max-width:414px) {
     .view-item-alert{
-       
         top: 11%;
         left: 40%;
         width:55%;
@@ -563,14 +558,6 @@ display: none;
         min-height:70vh;
         margin:1.4% auto 1.4% auto ;
     }
-    .view-back-bttn{
-        position: fixed;
-        top:17.8%;
-        left:8%;
-       
-
-      
-    }
     .view-quantity{
         width: 47%;
         margin-right: 0.3%;
@@ -578,10 +565,10 @@ display: none;
     .view-add-to-cart{
         width: 47%;
     }
-   
 }
 
 @media only screen and (max-width:360px) {
+    
    
 }
 
