--- a/client/src/components/Loader/loader.css
+++ b/client/src/components/Loader/loader.css
@@ -61,3 +61,24 @@
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 } 
+
+@media only screen  and (max-width:910px){
+
+
+}
+@media only screen  and (max-width:600px){
+  .page-loader-container{
+    min-height:75vh;
+  }
+}
+@media only screen  and (max-width:500px){
+  .page-loader-container{
+    min-height:80vh;
+  }
+}
+
+@media only screen  and (max-width:414px){
+  .page-loader-container{
+    min-height:65vh;
+  }
+}
