--- a/client/src/components/Loader/loader.css
+++ b/client/src/components/Loader/loader.css
@@ -62,11 +62,59 @@
   100% { transform: rotate(360deg); }
 } 
 
+/*help*/
+.cloud-Loader-container{
+  width:100%;
+  min-height:70vh;
+  margin-top:0.5%; 
+  display:flex;
+  flex-direction: column;                          
+  border:0;
+  justify-content: center;  
+  position:relative;
+  top:0;
+  background-color: #fff;
+
+}
+.help{
+  width: 2rem;
+  height:2rem;
+  border: 5px solid #242729;
+  border-radius: 50%;
+  -webkit-animation: rotation 1s ease-in-out infinite;
+     -moz-animation: rotation 1s ease-in-out infinite;
+          animation: rotation 1s ease-in-out infinite;
+  margin:auto;
+}
+.help:after{
+  width: 0.5rem;
+  height: 0.5rem;
+  background-color: #242729;
+  border-radius: 100%;
+  position: absolute;
+  content: "";
+}
+@-webkit-keyframes rotation{
+  0%{-webkit-transform: rotate(0deg);}
+  100%{-webkit-transform: rotate(360deg);}
+}
+@-moz-keyframes rotation{
+  0%{-moz-transform: rotate(0deg);}
+  100%{-moz-transform: rotate(360deg);}
+}
+@keyframes rotation{
+  0%{transform: rotate(0deg);}
+  100%{transform: rotate(360deg);}
+}
+
 @media only screen  and (max-width:910px){
 
 
 }
 @media only screen  and (max-width:600px){
+  .cloud-Loader-container{
+    min-height:60vh;
+  }
   .page-loader-container{
     min-height:75vh;
   }
