--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -21,8 +21,8 @@ footer{
 footer a {
     text-decoration: none;
     color: rgb(218, 152, 218);
-    font-size:0.9em;
-    font-weight: bold;
+    font-size:1em;
+    /* font-weight: bold; */
     font-family: 'acme';
 }
  footer a:hover {
@@ -102,7 +102,10 @@ footer li{
 .footer-form p{
     color: rgb(218, 152, 218);
     font-size: 0.9em;
-    text-align: center;
+    /* text-align: center; */
+    font-size:1em;
+    margin-left: 5%;
+    font-family: 'acme';
 }
 
 .footer-form form input[type="text"] {
